--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-fetch-hooks",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "A simple and powerful custom React hook (useApi) that simplifies API requests with automatic loading and error states. Ideal for clean and maintainable data fetching in React components.",
   "main": "dist/index.js",
   "files": [
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "publish": "tsc && npm publish --access public"
+    "publish": "tsc & npm publish --access public"
   },
   "keywords": [
     "react",
