--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "author": "ashrafbinahmad",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=17.0.0",
-    "@types/react": ">=17.0.0"
+    "react": ">=17.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3",
+    "@types/react": "^19.1.5",
+    "react": "^19.1.0"
   }
 }
