--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "jsx": "react-jsx",
       "target": "ES2019",
       "lib": ["ES2019", "DOM"],
       "module": "ESNext",
